Stage_two/k8s/mongo-statefulset-replicaset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-replicaset
  namespace: yolo
  labels:
    app: mongo
spec:
  serviceName: "mongo-headless"
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4.4
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
      # storageClassName: standard
