Stage_two/k8s/mongo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
  namespace: yolo
  labels:
    app: mongo
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
      name: mongo
